<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.codespace.agenda.FormularioActivity"
    tools:showIn="@layout/activity_formulario">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="220dp">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorBlue"
            android:contextClickable="false"
            android:src="@drawable/person" />

        <Button
            android:id="@+id/btnPhoto"
            android:background="@drawable/fundo_camera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/txtId"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/txtZipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="0123456789-"
        android:hint="@string/zipcode"/>

    <EditText
        android:id="@+id/txtStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address"/>

    <EditText
        android:id="@+id/txtAddressNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/address_number"/>

    <EditText
        android:id="@+id/txtNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/neighborhood"/>

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/txtState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/state"/>

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/txtWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/website"/>

    <EditText
        android:id="@+id/txtBirthDate"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"/>

    <RatingBar
        android:id="@+id/rtbRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_gravity="center"
        android:max="10"/>

</LinearLayout>
</ScrollView>