<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.codespace.agenda.ListaAlunos">
    <item
        android:id="@+id/menu_enviar_notas"
        android:orderInCategory="100"
        android:title="@string/send_scores"
        android:icon="@drawable/ic_enviar"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_baixar_provas"
        android:orderInCategory="100"
        android:title="@string/receive_exams"
        android:icon="@drawable/ic_receber"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mapa"
        android:orderInCategory="100"
        android:title="@string/see_in_map"
        android:icon="@drawable/ic_mapa"
        app:showAsAction="always" />
</menu>
